[Fix] Fix return value ofcontroller and logic of something